# kynetic-typography-generator

./: .gitignore  CMakeLists.txt  README.md  effect.h  genEffect  inputstring.cpp  kinetypogen.cpp  kinetypogen.h  main.cpp  pack.sh  pgr-projekt.pro  sequencerunner.cpp  sequencerunner.h  testeffect.cpp
demos/: dream  havel  shortUpper
doc/: pgr.tex  reference.bib
fonts/: downloadFonts.sh
shaders/: geometricshape.fs  text.vs  triangle.vs
src/: GLProgram.cpp  GLProgram.h  GLView.cpp  GLView.h  action.cpp  action.h  actionmanager.cpp  actionmanager.h  constants.h  effect.cpp  effect.h  fontcache.cpp  fontcache.h  geometricshape.cpp  geometricshape.h  group.cpp  group.h  inputstring.cpp  inputstring.h  kinetypogen.cpp  kinetypogen.h  macros.h  main.cpp  node.cpp  node.h  sequencerunner.cpp  sequencerunner.h  testeffect.cpp  testeffect.h  text.cpp  text.h  triangle.cpp  triangle.h
src/effects/: calibrationeffect.cpp  calibrationeffect.h  letteraside.cpp  letteraside.h  oneword.cpp  oneword.h  pileupeffect.cpp  pileupeffect.h  rotateflyeffect.cpp  rotateflyeffect.h  sinkeffect.cpp  sinkeffect.h  testeffect.cpp  testeffect.h  wordcloudeffect.cpp  wordcloudeffect.h
